# bcg-data-challenge

./: .gitignore  Feature_engineering.py  README.md  pyproject.toml
.github/workflows/: ci.yaml
Notebooks EDA/: EDA.ipynb
configs/: config.yaml
data/: .gitkeep
notebooks/: EDA.ipynb  business_analysis.ipynb
src/: .gitkeep  __init__.py
src/data_processing/: __init__.py  bronze_to_silver.py  silver_to_gold.py
src/modeling/: __init__.py  evaluate.py  train.py
src/utils/: __init__.py  helpers.py
